--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -260,7 +260,7 @@ font-size: 32px;
   font-weight: 300;
 }
  
-button[class*=btn] {
+/* button[class*=btn] {
   width: 30px;
   height: 30px;
   background-color: #E1E8EE;
@@ -268,7 +268,7 @@ button[class*=btn] {
   border: none;
   cursor: pointer;
   color:#a8b8c4;
-}
+} */
 button:focus,
 input:focus {
   outline:0;
