--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+.div_f{
+padding-top: 1.5rem;
+width: 80%;
+margin: auto;
+}
+
 .basic{
 margin: 0;
 padding: 0;
@@ -27,6 +33,14 @@ background-color: #f4f4f4;
 text-align: right;
 }
 
+.basic_tb_tdd{
+border-bottom: 1px solid #e4e4e4;
+text-align: center;
+padding: 15px 0px 15px 0px;
+    
+}
+
+    
 .basic_tb_th_up{
 padding: 20px 0px 20px 0px;
 text-align: center;
