--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -281,3 +281,6 @@ input:focus {
   color: #43484D;
   font-weight: 300;
 }
+
+.categoryIf.off{display: none !important;}
+.categoryIf.on{display:block !important;}
