--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -103,12 +103,13 @@ border: 2px solid #1b3f36;
 }
 
 .input_empty{
-position: relative;
 float: left;
 border-bottom: 1px solid #9E9E9E;
 text-align: right;
 width: 15%;
 padding: 10px;
+box-sizing: border-box;
+min-height: 40px;
 }
 
 .input_empty2{
