아라_다들 힘내장

--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/ara.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/ara.css
@@ -8,5 +8,24 @@ div.mypagelist ul.mypagebtn_ul li {display: table-cell;}
 div.mypagelist ul.mypagebtn_ul li a{font-size: 20px; color: #292828; font-weight: 600; line-height: 70px;
 			display: inline-block; width: 100%; height: 100%;}
 div.mypagelist ul.mypagebtn_ul li a:hover{color:#ca1818}
+.mcheck_0{display:none;}
+.mcheck_1{display:block;} 
+.starbtntd{display:none;}
+.starbtntd.s_undefined{display:block !important;}
+.startd.s_undefined{display:none;}
+ 
+.table {
+	border-collapse: collapse;
+	margin:auto;
+	text-align:center;
+}
 
+.table td, .table th {
+	border: 1px solid black;
+	padding: 20px;
+	white-space: nowrap;
+	width:20px;
+}
 
+.table td:first-child, .table th:first-child {
+	width:100px;
