--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -1,21 +1,48 @@
 @charset "UTF-8";
-.none{display: none !important;}
+
+/* home */
+.main_storeList{width:80%; margin:0 auto;}
+.main_storeList h1{text-align: center; padding: 80px; font-weight: 900;}
+.main_storeList .store_ul{width:100%; overflow:hidden;}
+.main_storeList .store_ul li{text-align: center; width: calc( 33.3% - 10px ); float: left; 
+margin: 5px;  border:1px solid #333; overflow:hidden;}
+.main_storeList .store_ul li a{line-height: 80px; display: inline-block; width: 100%; font-size: 24px;}
+.main_storeList .store_ul li a:hover{background-color: #ca1818; color:#fff}
+
+/* basic */
+div:hover, div:hover code, div:focus, div:focus code {
+    text-decoration: none;  transition-duration: 300ms;
+    transition-property: color, border-color, background-color;
+    transition-timing-function: ease;
+}
+.none{display: none !important; }
+.mb11{margin-bottom: 11px;}
+.pd30{padding : 30px;}
+.pd15{padding : 15px;}
+.pd_b0{padding-bottom:0;}
+.pd_t0{padding-top:0;}
+.pd_l0{padding-left:0;}
+.pd_r0{padding-right:0;}
+
+
+/* slick */
 .slick_box{position:relative}
 .slick_box .prev, .slick_box .next{position:absolute; top:50%;  transform:translateY(-50%);  font-size: 30px;}
 .slick_box .prev{left:10%;}
 .slick_box .next{right:10%;}
 
-.slick_box.menu_list_wrap .prev{left:10%; margin-left:-5%;}
-.slick_box.menu_list_wrap .next{right:10%; margin-right:-5%;}
-
+/* main_slick */
+.slick_box.menu_list_wrap .prev{left:0; margin-left:-5%;}
+.slick_box.menu_list_wrap .next{right:0; margin-right:-5%;}
 .slick_box.menu_category{width:100%;position: absolute;z-index: 6; top: 60px;left: 0; 
 			background: #fff;    padding: 0 10%;}
+
 .menu_bar{width:100%;
 			text-align: center; }
 .menu_bar > div a{font-size: 20px; color: #292828; font-weight: 600; line-height: 70px;
 			display: inline-block; width: 100%; height: 100%;}
 .menu_bar > div a:hover{color:#ca1818}
-.menu_list{width:100%; padding: 30px 140px; margin-top: 75px;}
+.menu_list{width:100%; padding: 30px 0; margin-top: 75px;}
 .menu_list > div div.ml{padding: 5px; border-radius: 35px; overflow: hidden;}
 .menu_list > div .menu_img{width:100%; height:300px; background:#ddd;}
 .menu_list > div .info{overflow:hidden; width:100%; padding: 25px; background: #fff;}
@@ -26,129 +53,40 @@
 .menu_list > div .info .title_dc{}
 
 
-div:hover, div:hover code, div:focus, div:focus code {
-    text-decoration: none;
-    transition-duration: 300ms;
-    transition-property: color, border-color, background-color;
-    transition-timing-function: ease;
-}
+
 
 /*메뉴리스트*/
-div:active, div:active code {
-    color: #222;
-    text-decoration: none;
-    transition-duration: 300ms;
-    transition-property: color, border-color, background-color;
-    transition-timing-function: ease;
+.menu_list div:active, div:active code {
+    color: #222;  text-decoration: none; transition-duration: 300ms;
+    transition-property: color, border-color, background-color; transition-timing-function: ease;
 }
 
 
-.col-item
-{
-    border: 1px solid #E1E1E1;
-    border-radius: 5px;
-    background: #FFF;
-}
-.col-item .photo img
-{
-    margin: 0 auto;
-    width: 100%;
-}
-
-.col-item .info
-{
-    padding: 10px;
-    border-radius: 0 0 5px 5px;
-    margin-top: 1px;
-}
-
-.col-item:hover .info {
-    background-color: #F5F5DC;
-}
-.col-item .price
-{
-    /*width: 50%;*/
-    float: left;
-    margin-top: 5px;
-}
-
-.col-item .price h5
-{
-    line-height: 20px;
-    margin: 0;
-}
-
-.price-text-color
-{
-    color: #219FD1;
-}
-
-.col-item .info .rating
-{
-    color: #777;
-}
-
-.col-item .rating
-{
-    /*width: 50%;*/
-    float: left;
-    font-size: 17px;
-    text-align: right;
-    line-height: 52px;
-    margin-bottom: 10px;
-    height: 52px;
-}
-
-.col-item .separator
-{
-    border-top: 1px solid #E1E1E1;
-}
-
-.clear-left
-{
-    clear: left;
-}
-
-.col-item .separator p
-{
-    line-height: 20px;
-    margin-bottom: 0;
-    margin-top: 10px;
-    text-align: center;
-}
-
-.col-item .separator p i
-{
-    margin-right: 5px;
-}
-.col-item .btn-add
-{
-    width: 50%;
-    float: left;
-}
-
-.col-item .btn-add
-{
-    border-right: 1px solid #E1E1E1;
-}
-
-.col-item .btn-details
-{
-    width: 50%;
-    float: left;
-    padding-left: 10px;
-}
-.controls
-{
-    margin-top: 20px;
-}
-[data-slide="prev"]
-{
-    margin-right: 10px;
-}
+.menu_list .col-item{ border: 1px solid #E1E1E1; border-radius: 5px; background: #FFF;}
+.menu_list .col-item .photo{ height:350px;background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;}
+.menu_list .col-item .info{ padding: 10px; border-radius: 0 0 5px 5px; margin-top: 1px;}
+.menu_list .col-item:hover .info { background-color: #F5F5DC;}
+.menu_list .col-item .price{ float: left; margin-top: 5px;}
+.menu_list .col-item .price h5{ line-height: 20px; margin: 0;}
+.menu_list .price-text-color{ color: #219FD1;}
+.menu_list .col-item .info .rating{ color: #777;}
+.menu_list .col-item .rating{ float: left; font-size: 17px; text-align: right;
+    line-height: 52px; margin-bottom: 10px; height: 52px;}
+.menu_list .col-item .separator{ border-top: 1px solid #E1E1E1;}
+.menu_list .clear-left{ clear: left;}
+.menu_list .col-item .separator p{ line-height: 20px; margin-bottom: 0; margin-top: 10px; text-align: center;}
+.menu_list .col-item .separator p i{ margin-right: 5px;}
+.menu_list .col-item .btn-add{width: 50%; float: left;}
+.menu_list .col-item .btn-add{border-right: 1px solid #E1E1E1;}
+.menu_list .col-item .btn-details{width: 50%; float: left; padding-left: 10px;}
+.menu_list .controls{margin-top: 20px;}
+.menu_list [data-slide="prev"]{margin-right: 10px;}
 
 /*장바구니*/
-
+.cart_btn_wrap{position:absolute; bottom:0; width:100%; overflow:hidden;}
+.cart_btn_wrap div{width: 50%; float: left; text-align: center; line-height: 73px; cursor: pointer; border-top: 1px solid #333; border-right: 1px solid #333;}
 .shopping-cart {
   position: absolute;
   top: 50%;
@@ -197,7 +135,7 @@ font-size: 32px;
 }
 
 
-.title {
+.shopping-cart .title {
   height: 60px;
   border-bottom: 1px solid #E1E8EE;
   padding: 20px 30px;
@@ -206,14 +144,14 @@ font-size: 32px;
   font-weight: 400;
 }
  
-.item {
+.shopping-cart .item {
   padding: 20px 30px;
   display: flex;
   border-bottom:  1px solid #E1E8EE;
 }
  
 
-.buttons {
+.shopping-cart .buttons {
 	
   position: relative;
   margin-right: 60px;
@@ -221,19 +159,19 @@ font-size: 32px;
   width: 30px;
   height: 30px;
 }
-.delete-btn{
+.shopping-cart .delete-btn{
   display: inline-block;
   Cursor: pointer;
   font-size: 26px;
 }
  
 
-.description {
+.shopping-cart .description {
   margin-right: 60px;
   width: 115px;
 }
  
-.description span {
+.shopping-cart .description span {
   display: block;
   font-size: 18px;
   line-height: 26px;
@@ -241,16 +179,16 @@ font-size: 32px;
   font-weight: 400;
 }
 
-.description span:last-child {
+ .shopping-cart .description span:last-child {
   font-weight: 300;
   font-size: 16px;
   color: #86939E;
 }
 
-.quantity {
+.shopping-cart .quantity {
   margin-right: 60px;
 }
-.quantity input {
+.shopping-cart .quantity input {
   -webkit-appearance: none;
   border: none;
   text-align: center;
@@ -260,7 +198,7 @@ font-size: 32px;
   font-weight: 300;
 }
  
-/* button[class*=btn] {
+.shopping-cart button[class*=btn] {
   width: 30px;
   height: 30px;
   background-color: #E1E8EE;
@@ -268,13 +206,13 @@ font-size: 32px;
   border: none;
   cursor: pointer;
   color:#a8b8c4;
-} */
-button:focus,
-input:focus {
+} 
+.shopping-cart button:focus,
+.shopping-cart input:focus {
   outline:0;
 }
 
-.total-price {
+.shopping-cart .total-price {
   width: 83px;
   text-align: center;
   font-size: 16px;
@@ -286,12 +224,6 @@ input:focus {
 .categoryIf.on{display:block !important;}
 
 
-.mb11{margin-bottom: 11px;}
-.pd30{padding : 30px;}
-.pd15{padding : 15px;}
-.pd_b0{padding-bottom:0;}
-.pd_t0{padding-top:0;}
-.pd_l0{padding-left:0;}
-.pd_r0{padding-right:0;}
+
 
 
