--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/jw.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
-
+/*head*/
+.gb_jb{position: absolute; right: 1%; margin-top: 1%; background: #eee;
+    z-index: 20; padding: 20px; border-radius: 5px; color:#333;}
+    
+.gb_jb a.logout{padding: 5px 34px; background: #fff; border-radius: 50px; margin-top: 10px;
+display: inline-block; border: 1px solid #d2d2d2;}
 /* home */
 .main_storeList{width:80%; margin:0 auto;}
 .main_storeList h1{text-align: center; padding: 80px; font-weight: 900;}
