--- a/sosoorder/src/main/resources/receipt/receipt.jrxml
+++ b/sosoorder/src/main/resources/receipt/receipt.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.2.0.final using JasperReports Library version 6.6.0  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="receipt" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3daf4291-dd3f-408f-9f77-f18dfbdfd7ab">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="receipt" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isTitleNewPage="true" uuid="3daf4291-dd3f-408f-9f77-f18dfbdfd7ab">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="sosorder"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<style name="txt" vTextAlign="Justified" fontName="맑은고딕" fontSize="13"/>
