--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -269,7 +269,33 @@ border-bottom: 3px solid black;
 padding: 100px 100px 50px 100px;
 }
 
-.list_h3{
-	
+.scrollbar
+{
+	margin-left: 30px;
+	float: left;
+	height: 300px;
+	width: 65px;
+	background: #F5F5F5;
+	overflow-y: scroll;
+	margin-bottom: 25px;
+}
+
+
+.style-4::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+#style-4::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-4::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+	border: 2px solid #555555;
 }
 
