--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -52,7 +52,7 @@ border-bottom: 1px solid #e4e4e4;
 border-right: 1px solid #e4e4e4;
 border-bottom: 1px solid #e4e4e4;
 padding: 20px 15px 20px 15px;
-width: 13%;
+width: 15%;
 background-color: #f4f4f4;
 text-align: right;
 }
@@ -60,6 +60,7 @@ text-align: right;
 .basic_tb_td{
 padding-top: 12.5px;
 padding-bottom: 12.5px;
+width: 85%;
 border-bottom: 1px solid #e4e4e4;
 padding: 10px 0 10px 16px;
 }
@@ -137,11 +138,13 @@ height: 56px;
 }
 
 .div-tt{
-	height: 60px;
-    overflow: hidden;
-    border-bottom: 3px solid #777;
+ height: 80px;
+ overflow: hidden;
+ border-bottom: 1px solid #bbb6b6;
+ padding-top: 20p;
+ padding-top: 20px;
 }
-/*  */
+
 
 /* 모달 긁어왓쥬 */
 
@@ -269,33 +272,50 @@ border-bottom: 3px solid black;
 padding: 100px 100px 50px 100px;
 }
 
-.scrollbar
-{
-	margin-left: 30px;
-	float: left;
-	height: 300px;
-	width: 65px;
-	background: #F5F5F5;
-	overflow-y: scroll;
-	margin-bottom: 25px;
+.
+
+/* 스크롤바 */
+  .scroll1 {
+    width: 250px;
+    height: 140px;
+    overflow: auto;
+  }
+  .scroll1::-webkit-scrollbar {
+    width: 10px;
+  }
+  .scroll1::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+  }
+  .scroll1::-webkit-scrollbar-track {
+    background-color: grey;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+  }
+
+.div_menu1{
+padding: 15px;
+background: white;
 }
 
-
-.style-4::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+/* 크키에 따라 처리 */
+@media (max-width:1660px) {
+	
+	
+	
+	
 }
 
-#style-4::-webkit-scrollbar
-{
-	width: 10px;
-	background-color: #F5F5F5;
+@media  (max-width:1280px) {
+
 }
 
-#style-4::-webkit-scrollbar-thumb
-{
-	background-color: #000000;
-	border: 2px solid #555555;
+@media  (max-width:880px) {
+
 }
+
+@media  (max-width:550px) {
+
+}
+
 
