--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/ara.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/ara.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 
 
-div.mypagelist{width:100%;/* position: absolute; */z-index: 6; top: 60px;left: 0; 
-			background: #fff;    padding: 0 10%;}
-div.mypagelist ul.mypagebtn_ul{width:100%; display: table; text-align: center; }
-div.mypagelist ul.mypagebtn_ul li {display: table-cell;}
+div.mypagelist{width:100%;}
+div.mypagelist ul.mypagebtn_ul{width: 100%; text-align: center; overflow: hidden; }
+div.mypagelist ul.mypagebtn_ul li { border: 3px solid #fff; background: #fff; margin: 10px; float: left; width: calc(32% - 10px);}
 div.mypagelist ul.mypagebtn_ul li a{font-size: 20px; color: #292828; font-weight: 600; line-height: 70px;
 			display: inline-block; width: 100%; height: 100%;}
-div.mypagelist ul.mypagebtn_ul li a:hover{color:#ca1818}
+div.mypagelist ul.mypagebtn_ul li:hover { border: 3px solid #ff3d33; box-sizing: border-box;}
+div.mypagelist ul.mypagebtn_ul li:hover a{color:#ca1818}
+
+div.mypagelist ul.mypagebtn_ul li.active { border: 3px solid #ff3d33; box-sizing: border-box;}
+div.mypagelist ul.mypagebtn_ul li.active a{color:#ca1818}
+
 .mcheck_0{display:none;}
 .mcheck_1{display:block;} 
 .starbtntd{display:none;}
