--- a/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
+++ b/sosoorder/src/main/webapp/resources/admin/scss/addcss/hw.css
@@ -230,14 +230,27 @@ float: left;
 padding: 10px 0px;
 text-align: center;
 height: 80px;
+background: #080606;
+color: white;
+font-weight: bold;
+font-size: 20px;
+}
+
+.div_error{
+	width: 100%;
+    text-align: center;
+    padding-top: 50px;
+    font-size: 15px;
+    font-weight: bold;
+    color: red;
 }
 
 .btn_b{
-	background: #ff541e;
+background: #F44336;
 }
 
 .frm_point{
-padding: 100px 100px 0px 100px;
+padding: 50px 100px 0px 100px;
 margin: auto;
 }
 
@@ -268,8 +281,9 @@ font-size: 18px;
 }
 
 .div_list{
-border-bottom: 3px solid black;
-padding: 100px 100px 50px 100px;
+ padding-top: 100px;
+ padding: 100px 0px 50px 0px;
+ text-align: center;
 }
 
 .
